# parkinson-annotator

./: .dockerignore  .gitignore  404.html  Dockerfile  Jenkinsfile  LICENSE  README.md  compose.yml  db_extractor.py  environment.yml  index.html  jenkins_pipeline_console_log.txt  mkdocs.yml  parkinsons_data.db  pyproject.toml  requirements.txt  temp_file_structure.docx
DOCKER/: index.html
INSTALLATION/: index.html
Parkinsons_annotator/: .env.example  logger.py  main.py
Parkinsons_annotator/modules/: database-creation  database-creation.py  database_creation.py  database_extractor.py  database_search.py  interface.py  models.py
Parkinsons_annotator/modules/templates/: interface_package.html
Parkinsons_annotator/utils/: clinvar_fetch.py  parse_genomic_notation.py  variantvalidator_fetch.py
TECHNICAL_MANUAL/: index.html
USER_MANUAL/: index.html
data/ParkCSV/: Patient1.csv  Patient2.csv  Patient3.csv  Patient4.csv  Patient5.csv  Patient6.csv  Patient7.csv  Patient8.csv
data/ParkVCF/: Patient1.vcf  Patient2.vcf  Patient3.vcf  Patient4.vcf  Patient5.vcf  Patient6.vcf  Patient7.vcf  Patient8.vcf
docs/: DOCKER.md  INSTALLATION.md  TECHNICAL_MANUAL.md  USER_MANUAL.md  index.md
search/: search_index.json
src/Parkinsons_annotator/: logger.py
src/Parkinsons_annotator/utils/: variantvalidator_fetch.py
src/parkinsons_annotator/: .env.example  __init__.py  logger.py  main.py  parkinsons_data.db
src/parkinsons_annotator/modules/: data_extraction.py  database_creation.py  database_search.py  db.py  interface.py  models.py  routes.py
src/parkinsons_annotator/templates/: base.html  info.html  interface_package.html
src/parkinsons_annotator/utils/: clinvar_fetch.py  data_checks.py  variantvalidator_fetch.py
tests/: test_clinvar_fetch.py  test_data_checks.py  test_data_extraction.py  test_database_list.py  test_database_search.py  test_db.py  test_main.py  test_routes.py  test_variantvalidator_fetch.py
utils/: parkinsons_data.db
