[project]
name = "parkinsons-annotator"
version = "0.1.0"
description = "A web-based app for storing and querying variant data, returning the ClinVar annotation for variants."
readme = "README.md"
# Specify minimum supported python distribution
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Healthcare professionals"
]
# Runtime dependencies required for package to function
dependencies = [
    "flask==3.1.2",
    "sqlalchemy==2.0.44",
    "biopython==1.86",
    "pandas==2.3.3",
    "requests==2.32.5",
    "python-dotenv==1.2.1",
    "markdown==3.10"
]

# Optional dependencies used by developers
[project.optional-dependencies]
dev = [
    "pytest==8.4.2",       # Testing framework
    "pytest-cov==7.0.0"   # Test coverage reporting
    ]

# This creates a runnable CLI command
[project.scripts]
parkinsons-annotator = "parkinsons_annotator.main:main"

# Project repo
[project.urls]
Homepage = "https://github.com/JellyEllie/parkinson-annotator.git"

# Using setuptools and wheel to build
[build-system]
requires = ["setuptools>=61.0",     # Using setuptools for build backend
            "wheel"]                # Wheel for efficient distribution
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"parkinsons_annotator" = ["templates/*"]


[tool.pytest.ini_options]
pythonpath = ["src"]                # Add the 'src' directory to Python's import path during tests